--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,16 +1,17 @@
-<footer class="bg-accent text-primary-light container mx-auto px-4 max-w-4xl">
-  <div class="container px-4 py-2">
-    <!-- Flex container with column direction on mobile, row on desktop -->
-    <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-      <!-- Left side with existing content -->
-      <p class="text-center w-full md:w-auto">
+<footer class="w-full bg-primary-dark">
+  <div class="container mx-auto px-4 sm:px-0 max-w-4xl">
+    <div class="flex flex-col md:flex-row justify-between items-center py-4">
+      <!-- Left side: powered by text -->
+      <p class="text-center w-full md:w-auto text-white">
         {{ T "poweredByHugo" }}
         <span class="hugo-text"><span class="letter">H</span>ugo</span> |
-        <a href="{{ .Site.Params.archiveOldSite }}" target="_blank">{{ T "oldWebsite" }}</a>
+        <a href="{{ .Site.Params.archiveOldSite }}" target="_blank"
+          class="hover:text-gray-400 transition-colors duration-300">
+          {{ T "oldWebsite" }}
+        </a>
       </p>
-
-      <!-- Right side with social icons -->
-      <div class="flex space-x-4 justify-center w-full md:w-auto">
+      <!-- Right side: social icons and translations -->
+      <div class="flex space-x-4 justify-center w-full md:w-auto text-white">
         <a href="{{ .Site.Params.github }}" target="_blank" class="hover:text-gray-400 transition-colors duration-300">
           <i class="fab fa-github text-xl"></i>
         </a>
@@ -26,13 +27,10 @@
           class="hover:text-gray-400 transition-colors duration-300">
           <i class="fab fa-facebook text-xl"></i>
         </a>
-
         <div class="w-0.5 h-6 bg-current self-center rounded-full"></div>
         {{ range .Translations }}
-        <a href="{{ .RelPermalink }}">
-          <span class="text-xl inline-block align-middle">
-            {{ .Language.LanguageName }}
-          </span>
+        <a href="{{ .RelPermalink }}" class="hover:text-gray-400 transition-colors duration-300">
+          <span class="text-xl inline-block align-middle">{{ .Language.LanguageName }}</span>
         </a>
         {{ end }}
       </div>
