--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="w-full">
   <div class="w-full bg-primary-dark hidden md:block">
     <div class="container mx-auto px-4 sm:px-0 max-w-4xl">
-      <div class="flex justify-between items-center py-2 text-sm">
+      <div class="flex justify-between items-center py-4">
         <div class="flex space-x-4">
           {{ range .Site.Menus.main }}
           {{ if .Params.fullwidthVisible | default true }}
