--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,38 +1,17 @@
 <footer class="w-full bg-primary-dark">
   <div class="container mx-auto px-4 sm:px-0 max-w-4xl">
-    <div class="flex flex-col md:flex-row justify-between items-center py-4">
-      <!-- Left side: powered by text -->
+    <div class="flex flex-col md:flex-row justify-between items-center py-2">
+      <!-- Left side -->
       <p class="text-center w-full md:w-auto text-white">
         {{ T "poweredByHugo" }}
-        <span class="hugo-text"><span class="letter">H</span>ugo</span> |
+        <span class="hugo-text"><span class="letter">H</span>ugo</span>
+      </p>
+      <!-- Right side -->
+      <div class="flex space-x-4 justify-center w-full md:w-auto text-white">
         <a href="{{ .Site.Params.archiveOldSite }}" target="_blank"
           class="hover:text-gray-400 transition-colors duration-300">
-          {{ T "oldWebsite" }}
+          {{ T "oldWebsite" }}↗
         </a>
-      </p>
-      <!-- Right side: social icons and translations -->
-      <div class="flex space-x-4 justify-center w-full md:w-auto text-white">
-        <a href="{{ .Site.Params.github }}" target="_blank" class="hover:text-gray-400 transition-colors duration-300">
-          <i class="fab fa-github text-xl"></i>
-        </a>
-        <a href="{{ .Site.Params.instagram }}" target="_blank"
-          class="hover:text-gray-400 transition-colors duration-300">
-          <i class="fab fa-instagram text-xl"></i>
-        </a>
-        <a href="{{ .Site.Params.linkedin }}" target="_blank"
-          class="hover:text-gray-400 transition-colors duration-300">
-          <i class="fab fa-linkedin text-xl"></i>
-        </a>
-        <a href="{{ .Site.Params.facebook }}" target="_blank"
-          class="hover:text-gray-400 transition-colors duration-300">
-          <i class="fab fa-facebook text-xl"></i>
-        </a>
-        <div class="w-0.5 h-6 bg-current self-center rounded-full"></div>
-        {{ range .Translations }}
-        <a href="{{ .RelPermalink }}" class="hover:text-gray-400 transition-colors duration-300">
-          <span class="text-xl inline-block align-middle">{{ .Language.LanguageName }}</span>
-        </a>
-        {{ end }}
       </div>
     </div>
   </div>
