--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
           colors: {
             "primary-dark": "#16213e",
             "primary-light": "#e2e8f0",
-            accent: "#0f3460",
+            accent: "#042a59",
           },
         },
       },
