--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,46 +32,82 @@
 </div>
 
 <section class="mb-8">
-    <h2 class="text-3xl font-bold mb-4 text-primary-dark">{{ T "activitiesAndProject" }}</h2>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        {{ $maxItems := 4 }}
-        {{ $activitiesAndProjects := union (where .Site.RegularPages "Type" "attivita") (where .Site.RegularPages "Type"
-        "progetti") }}
-        {{ $sortedActivitiesAndProjects := sort $activitiesAndProjects ".Date" "desc" }}
-        {{ range first $maxItems $sortedActivitiesAndProjects }}
-
-        <!-- create link and text -->
-        {{ $link := "" }}
-        {{ $text := "" }}
-        {{ if .Params.externalUrl }}
-        {{ $link = .Params.externalUrl }}
-        {{ $text = T "goExternalText" }}
-        {{ else }}
-        {{ $link = .RelPermalink | relLangURL }}
-        {{ $text = T "goText" }}
-        {{ end }}
-        <!-- use custom components "card" -->
-        {{ partial "card.html" (dict
-        "title" .Title
-        "content" (.Params.subtitle | default .Summary )
-        "goToLink" $link
-        "goToText" $text
-        "badge" (cond (eq .Type "attivita") "Attività" "Progetto" )) }}
-        {{ end }}
-    </div>
-
-    {{ if gt (len $sortedActivitiesAndProjects) $maxItems }}
-    <div class="text-center">
-        <div class="grid grid-cols-2 md:grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+        <!-- Activities Column -->
+        <div class="flex flex-col">
+            <h2 class="text-3xl font-bold mb-4 text-primary-dark">{{ T "activitiesHeader" }}</h2>
+            
+            {{ $activities := where .Site.RegularPages "Type" "attivita" }}
+            {{ $sortedActivities := sort $activities ".Date" "desc" }}
+            
+            <div class="grid grid-rows-2 gap-4 flex-grow">
+                {{ range first 2 $sortedActivities }}
+                    <!-- create link and text -->
+                    {{ $link := "" }}
+                    {{ $text := "" }}
+                    {{ if .Params.externalUrl }}
+                        {{ $link = .Params.externalUrl }}
+                        {{ $text = T "goExternalText" }}
+                    {{ else }}
+                        {{ $link = .RelPermalink | relLangURL }}
+                        {{ $text = T "goText" }}
+                    {{ end }}
+                    <!-- use custom components "card" -->
+                    {{ partial "card.html" (dict
+                        "title" .Title
+                        "content" (.Params.subtitle | default .Summary )
+                        "goToLink" $link
+                        "goToText" $text
+                        "badge" "Attività"
+                        "fullHeight" true
+                        "withShadow" true) }}
+                {{ end }}
+            </div>
+            
             {{ $activities := site.GetPage "section" "attivita" }}
-            <a href="{{ $activities.RelPermalink | relLangURL }}"
-                class="inline-block bg-accent text-primary-light px-4 py-2 rounded-lg">{{ T "allActivities" }}</a>
+            <div class="mt-4">
+                <a href="{{ $activities.RelPermalink | relLangURL }}"
+                    class="inline-block bg-accent text-primary-light px-4 py-2 rounded-lg w-full text-center">{{ T "allActivities" }}</a>
+            </div>
+        </div>
+
+        <!-- Projects Column -->
+        <div class="flex flex-col">
+            <h2 class="text-3xl font-bold mb-4 text-primary-dark">{{ T "projectsHeader" }}</h2>
+            
+            {{ $projects := where .Site.RegularPages "Type" "progetti" }}
+            {{ $sortedProjects := sort $projects ".Date" "desc" }}
+            
+            <div class="grid grid-rows-2 gap-4 flex-grow">
+                {{ range first 2 $sortedProjects }}
+                    <!-- create link and text -->
+                    {{ $link := "" }}
+                    {{ $text := "" }}
+                    {{ if .Params.externalUrl }}
+                        {{ $link = .Params.externalUrl }}
+                        {{ $text = T "goExternalText" }}
+                    {{ else }}
+                        {{ $link = .RelPermalink | relLangURL }}
+                        {{ $text = T "goText" }}
+                    {{ end }}
+                    <!-- use custom components "card" -->
+                    {{ partial "card.html" (dict
+                        "title" .Title
+                        "content" (.Params.subtitle | default .Summary )
+                        "goToLink" $link
+                        "goToText" $text
+                        "badge" "Progetto"
+                        "fullHeight" true
+                        "withShadow" true) }}
+                {{ end }}
+            </div>
+            
             {{ $projects := site.GetPage "section" "progetti" }}
-            <a href="{{ $projects.RelPermalink | relLangURL }}"
-                class="inline-block bg-accent text-primary-light px-4 py-2 rounded-lg">{{ T "allProjects" }}</a>
+            <div class="mt-4">
+                <a href="{{ $projects.RelPermalink | relLangURL }}"
+                    class="inline-block bg-accent text-primary-light px-4 py-2 rounded-lg w-full text-center">{{ T "allProjects" }}</a>
+            </div>
         </div>
     </div>
-    {{ end }}
 </section>
 {{ end }}
