--- a/layouts/attivita/single.html
+++ b/layouts/attivita/single.html
@@ -54,7 +54,13 @@
                 <i class="fas fa-map-marker-alt text-xl text-accent mt-1 mr-3"></i>
                 <div>
                     <h3 class="font-bold text-lg">{{ T "locationLabel" | default "Location" }}</h3>
-                    <p>{{ . }}</p>
+                    <p>
+                        {{ if $.Params.locationUrl }}
+                        <a href="{{ $.Params.locationUrl }}" target="_blank" rel="noopener" class="hover:underline text-accent">{{ . }}</a>
+                        {{ else }}
+                        {{ . }}
+                        {{ end }}
+                    </p>
                 </div>
             </div>
             {{ end }}
