--- a/layouts/index.html
+++ b/layouts/index.html
@@ -165,7 +165,7 @@
                         "goToLink" $link
                         "goToText" $text
                         "badge" (cond $upcoming "Prossimamente" "")
-                        "isExternal" (eq true $external)
+                        "isExternal" $external
                         "fullHeight" true
                         "withShadow" false) }}
                 {{ end }}
