--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,20 +43,31 @@
             <div class="md:w-2/3">
                 <h3 class="text-xl font-bold text-green-800 mb-2">{{ $highlightedActivity.Title }}</h3>
                 
-                <div class="flex items-center mb-3 text-gray-700">
-                    <i class="far fa-calendar-alt mr-2 text-green-600"></i>
-                    <span>{{ $highlightedActivity.Date.Format "02 January 2006" }}</span>
-                    {{ if ne ($highlightedActivity.Date.Format "15:04") "00:00" }}
-                    <span class="mx-2">{{ $highlightedActivity.Date.Format "15:04" }}</span>
-                    {{ end }}
-                    {{ with $highlightedActivity.Params.endDate }}
-                    <span class="mx-2">-</span>
-                    <span>{{ time.AsTime . | time.Format "02 January 2006" }}</span>
-                    {{ if ne ((time.AsTime .).Format "15:04") "00:00" }}
-                    <span class="mx-2">{{ (time.AsTime .).Format "15:04" }}</span>
-                    {{ end }}
-                    {{ end }}
-                </div>
+                {{ $startTime := $highlightedActivity.Date.Format "15:04" }}
+                {{ $endTime := "00:00" }}
+
+                {{ with $highlightedActivity.Params.endDate }}
+                    {{ $endTime = (time.AsTime .).Format "15:04" }}
+                {{ end }}
+
+                {{ if or (ne $startTime "00:00") (ne $endTime "00:00") }}
+                    <div class="flex items-center mb-3 text-gray-700">
+                        <i class="far fa-clock mr-2 text-green-600"></i>
+
+                        {{ if ne $startTime "00:00" }}
+                            <span>{{ $startTime }}</span>
+                        {{ end }}
+
+                        {{ with $highlightedActivity.Params.endDate }}
+                            <span class="mx-2">-</span>
+
+                            {{ $formattedEndTime := (time.AsTime .).Format "15:04" }}
+                            {{ if ne $formattedEndTime "00:00" }}
+                                <span>{{ $formattedEndTime }}</span>
+                            {{ end }}
+                        {{ end }}
+                    </div>
+                {{ end }}
                 
                 {{ with $highlightedActivity.Params.location }}
                 <div class="flex items-center mb-3 text-gray-700">
