--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -53,8 +53,8 @@
         <div class="space-y-6">
           {{ range .Site.Menus.main }}
           <a href="{{ .URL | relLangURL }}"
-            class="block py-2 text-2xl hover:underline focus:outline-none focus:ring-2 focus:ring-primary-light transition-colors duration-200 {{ if eq .Params.rainbowEffect true }}rainbow-text{{ end }} {{ if eq $.RelPermalink .URL }}font-bold{{ end }}"
-            {{ if eq $.RelPermalink .URL }}aria-current="page" {{ end }}>
+            class="block py-2 text-2xl hover:underline focus:outline-none focus:ring-2 focus:ring-primary-light transition-colors duration-200 {{ if eq .Params.rainbowEffect true }}rainbow-text{{ end }} {{ if or (eq $.RelPermalink .URL) (and (hasPrefix $.RelPermalink .URL) (ne .URL "/")) }}font-bold{{ end }}"
+            {{ if or (eq $.RelPermalink .URL) (and (hasPrefix $.RelPermalink .URL) (ne .URL "/")) }}aria-current="page" {{ end }}>
             {{ .Name }}{{if eq .Params.external true }}↗{{ end }}
           </a>
           {{ end }}
