--- a/layouts/partials/card.html
+++ b/layouts/partials/card.html
@@ -51,7 +51,7 @@
         {{ end }}
         
         <!-- content -->
-        <div class="text-justify">{{ .content | safeHTML }}</div>
+        <div class="prose text-justify">{{ .content | safeHTML }}</div>
     </div>
     <!-- footer -->
     {{ if $showFooter }}
