--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,8 +40,42 @@
             "primary-light": "#e2e8f0",
             accent: "#042a59",
           },
+          typography: {
+            DEFAULT: {
+              css: {
+                color: '#333',
+                a: {
+                  color: '#042a59',
+                  '&:hover': {
+                    color: '#16213e',
+                  },
+                },
+              },
+            },
+          },
         },
       },
+      plugins: [
+        function({ addComponents }) {
+          addComponents({
+            '.prose': {
+              '& p': { marginTop: '1.25em', marginBottom: '1.25em' },
+              '& a': { color: '#042a59', textDecoration: 'underline' },
+              '& ul': { listStyleType: 'disc', marginTop: '1.25em', marginBottom: '1.25em', paddingLeft: '1.625em' },
+              '& ol': { listStyleType: 'decimal', marginTop: '1.25em', marginBottom: '1.25em', paddingLeft: '1.625em' },
+              '& li': { marginTop: '0.5em', marginBottom: '0.5em' },
+              '& h1': { fontSize: '2.25em', marginTop: '0', marginBottom: '0.8em', fontWeight: '800' },
+              '& h2': { fontSize: '1.5em', marginTop: '2em', marginBottom: '1em', fontWeight: '700' },
+              '& h3': { fontSize: '1.25em', marginTop: '1.6em', marginBottom: '0.6em', fontWeight: '600' },
+              '& h4': { fontSize: '1.125em', marginTop: '1.5em', marginBottom: '0.5em', fontWeight: '600' },
+              '& blockquote': { fontWeight: '500', fontStyle: 'italic', color: '#1a202c', borderLeftWidth: '0.25rem', borderLeftColor: '#e2e8f0', paddingLeft: '1rem' },
+              '& code': { color: '#1a202c', fontWeight: '600', fontSize: '0.875em' },
+              '& pre': { backgroundColor: '#f7fafc', overflow: 'auto', padding: '1rem', borderRadius: '0.375rem', marginTop: '1.25em', marginBottom: '1.25em' },
+              '& hr': { borderColor: '#e2e8f0', marginTop: '3em', marginBottom: '3em' },
+            }
+          })
+        }
+      ],
     };
   </script>
   {{ if in .RelPermalink "/photogallery/" }}
