fix: spacing menu su mobile

--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -20,7 +20,7 @@
           </a>
         </div>
 
-        <div class="flex space-x-4 justify-end pr-8">
+        <div class="flex space-x-4 justify-end">
           <!-- Rest of the social links and language selector remain unchanged -->
           <a href="{{ .Site.Params.github }}" target="_blank"
             class="hover:text-gray-400 transition-colors duration-300">
