fix: eventi ricorrenti

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -101,6 +101,7 @@
   </div>
   {{ partial "footer.html" . }}
   <script src="/js/main.js"></script>
+  <script src="/js/recurring-events.js"></script>
 </body>
 
 </html>
