--- a/layouts/index.html
+++ b/layouts/index.html
@@ -170,7 +170,10 @@
                         "content" (.Params.subtitle | default .Summary)
                         "date" .Date
                         "endDate" .Params.endDate
-                        "recurrence" .Params.recurrencePattern
+                        "recurring" .Params.recurring
+                        "recurrenceType" .Params.recurrenceType
+                        "recurrenceDay" .Params.recurrenceDay
+                        "recurrencePattern" .Params.recurrencePattern
                         "location" .Params.location
                         "locationUrl" .Params.locationUrl
                         "goToLink" $link
