--- a/layouts/attivita/single.html
+++ b/layouts/attivita/single.html
@@ -34,16 +34,35 @@
                         {{ end }}
                         {{ end }}
                     </p>
+                    
+                    {{ if .Params.recurring }}
+                    <div class="recurring-event mt-1" 
+                        data-start-date="{{ .Date }}"
+                        data-recurrence-type="{{ .Params.recurrenceType | default "weekly" }}"
+                        data-recurrence-pattern="{{ .Params.recurrencePattern }}"
+                        data-text-today="{{ T "today" | default "Today" }}"
+                        data-text-tomorrow="{{ T "tomorrow" | default "Tomorrow" }}"
+                        data-text-next="{{ T "next" | default "Next:" }}">
+                        <div class="flex items-center">
+                            <i class="far fa-calendar-check mr-2"></i>
+                            <span class="next-date">
+                                <span class="loading">{{ T "calculating" | default "Calculating next date..." }}</span>
+                            </span>
+                        </div>
+                    </div>
+                    {{ end }}
                 </div>
             </div>
             
             <!-- Recurrence -->
-            {{ with .Params.recurrencePattern }}
+            {{ if .Params.recurring }}
             <div class="flex items-start">
                 <i class="fas fa-sync-alt text-xl text-accent mt-1 mr-3"></i>
                 <div>
                     <h3 class="font-bold text-lg">{{ T "recurrenceLabel" | default "Recurrence" }}</h3>
-                    <p>{{ . }}</p>
+                    <p class="font-semibold">
+                        {{ .Params.recurrencePattern | default (printf "%s" (humanize (.Params.recurrenceType | default "weekly"))) }}
+                    </p>
                 </div>
             </div>
             {{ end }}
